--- a/WebContent/css/cartIn.css
+++ b/WebContent/css/cartIn.css
@@ -111,3 +111,19 @@ th, td {
   vertical-align: middle; 
 }
 
+#delinput1{
+	width: 300px;
+	height: 50px;
+	/* border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 3px solid black; */
+	
+	border:none;
+	border-right:0px; 
+	border-top:0px; 
+	boder-left:0px; 
+	border-bottom: 3px solid black;
+
+}
+
